--- a/clean_wrangling.ipynb
+++ b/clean_wrangling.ipynb
@@ -32,11 +32,13 @@
    ],
    "source": [
     "from datetime import datetime as dt\n",
+    "\n",
+    "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
-    "%matplotlib inline "
+    "\n",
+    "%matplotlib inline"
    ]
   },
   {
@@ -185,9 +187,9 @@
     }
    ],
    "source": [
-    "#check if there are duplicated category_id. Both would return the same number of records as the original if none\n",
+    "# check if there are duplicated category_id. Both would return the same number of records as the original if none\n",
     "print(len(categories))\n",
-    "print(np.sum(categories.item_category_name.value_counts() ==1))"
+    "print(np.sum(categories.item_category_name.value_counts() == 1))"
    ]
   },
   {
@@ -325,7 +327,7 @@
    ],
    "source": [
     "print(len(items_mod))\n",
-    "print(np.sum(items_mod.item_name.value_counts() ==1))"
+    "print(np.sum(items_mod.item_name.value_counts() == 1))"
    ]
   },
   {
@@ -449,7 +451,7 @@
    ],
    "source": [
     "print(len(shop_mod))\n",
-    "print(np.sum(shop_mod.shop_name.value_counts() ==1))"
+    "print(np.sum(shop_mod.shop_name.value_counts() == 1))"
    ]
   },
   {
@@ -708,7 +710,7 @@
     }
    ],
    "source": [
-    "#check price distribution to identify outliers\n",
+    "# check price distribution to identify outliers\n",
     "plt.boxplot(train_sales.item_price)\n",
     "plt.show()"
    ]
@@ -775,8 +777,8 @@
     }
    ],
    "source": [
-    "#see that there is a major outlier on price. Also, we find some negative value on item prices which we should look into\n",
-    "train_sales[train_sales.item_price >=100000]"
+    "# see that there is a major outlier on price. Also, we find some negative value on item prices which we should look into\n",
+    "train_sales[train_sales.item_price >= 100000]"
    ]
   },
   {
@@ -841,9 +843,9 @@
     }
    ],
    "source": [
-    "#how many transaction that involve item id 6066\n",
-    "train_sales[train_sales.item_id ==6066]\n",
-    "#only 1, we will treat this record as outlier and will drop that from the dataset"
+    "# how many transaction that involve item id 6066\n",
+    "train_sales[train_sales.item_id == 6066]\n",
+    "# only 1, we will treat this record as outlier and will drop that from the dataset"
    ]
   },
   {
@@ -905,7 +907,7 @@
     }
    ],
    "source": [
-    "#any transaction has negadive item price\n",
+    "# any transaction has negadive item price\n",
     "train_sales[train_sales.item_price < 0]"
    ]
   },
@@ -1094,7 +1096,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_sales.loc[train_sales.item_price<0, 'item_price'] = 1249"
+    "train_sales.loc[train_sales.item_price < 0, 'item_price'] = 1249"
    ]
   },
   {
@@ -1103,7 +1105,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#filter out the 6066 item id record by restricting the max item price\n",
+    "# filter out the 6066 item id record by restricting the max item price\n",
     "train_sales = train_sales.query('item_price < 10000')"
    ]
   },
@@ -1130,7 +1132,7 @@
     }
    ],
    "source": [
-    "#check for missing value\n",
+    "# check for missing value\n",
     "np.sum(train_sales.isnull())"
    ]
   },
@@ -1351,7 +1353,7 @@
     }
    ],
    "source": [
-    "#check to ensure all columns exist\n",
+    "# check to ensure all columns exist\n",
     "df3.head()"
    ]
   },
@@ -1362,7 +1364,8 @@
    "outputs": [],
    "source": [
     "# rearrange columns order\n",
-    "df = df3[['date', 'date_block_num', 'shop_id', 'shop_name', 'item_id', 'item_name', 'item_category_id', 'item_category_name', 'item_price', 'item_cnt_day', 'sales']]"
+    "df = df3[['date', 'date_block_num', 'shop_id', 'shop_name', 'item_id', 'item_name',\n",
+    "          'item_category_id', 'item_category_name', 'item_price', 'item_cnt_day', 'sales']]"
    ]
   },
   {
@@ -1508,7 +1511,7 @@
     }
    ],
    "source": [
-    "#final view of the completed dataframe\n",
+    "# final view of the completed dataframe\n",
     "df.head()"
    ]
   },
@@ -1545,7 +1548,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
