--- a/exploratory.ipynb
+++ b/exploratory.ipynb
@@ -50,17 +50,19 @@
     }
    ],
    "source": [
-    "from datetime import datetime as dt\n",
     "from datetime import date\n",
+    "from datetime import datetime as dt\n",
+    "\n",
     "import holidays\n",
+    "import matplotlib.pyplot as plt\n",
     "# from translate import Translator as tran\n",
     "# from googletrans import Translator as googtran\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
+    "\n",
     "sns.set()\n",
-    "%matplotlib inline "
+    "%matplotlib inline"
    ]
   },
   {
@@ -132,8 +134,8 @@
     }
    ],
    "source": [
-    "plt.figure(figsize = (15,6))\n",
-    "sns.lineplot(x='date_block_num', y='sales', data =seasonal)\n",
+    "plt.figure(figsize=(15, 6))\n",
+    "sns.lineplot(x='date_block_num', y='sales', data=seasonal)\n",
     "plt.show()"
    ]
   },
@@ -189,7 +191,7 @@
     }
    ],
    "source": [
-    "plt.figure(figsize = (10, 5))\n",
+    "plt.figure(figsize=(10, 5))\n",
     "sns.boxplot(x='dayofweek', y='sales', data=weekday)\n",
     "plt.show()"
    ]
@@ -316,8 +318,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for date, name in sorted(holidays.RU(years=[2013,2014,2015]).items()):\n",
-    "    \n",
+    "for date, name in sorted(holidays.RU(years=[2013, 2014, 2015]).items()):\n",
+    "\n",
     "    holiday[date] = name"
    ]
   },
@@ -356,7 +358,8 @@
    "outputs": [],
    "source": [
     "# Add a new column to capture the holiday. Days that don't have a holiday match will be call 'Norm'\n",
-    "weekday['holiday'] = weekday['date'].apply(lambda x: x.date()).map(holiday).fillna('Norm')"
+    "weekday['holiday'] = weekday['date'].apply(\n",
+    "    lambda x: x.date()).map(holiday).fillna('Norm')"
    ]
   },
   {
@@ -494,8 +497,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "product = train_df.groupby(['item_category_name'])['sales'].sum().reset_index(drop=False)\n",
-    "product = product.sort_values('sales',ascending=False)\n",
+    "product = train_df.groupby(['item_category_name'])[\n",
+    "    'sales'].sum().reset_index(drop=False)\n",
+    "product = product.sort_values('sales', ascending=False)\n",
     "# Translate item category from Russian to English\n",
     "# product['item_category_name'] = product['item_category_name'].apply(lambda x: translator.translate(x))"
    ]
@@ -653,7 +657,8 @@
    "outputs": [],
    "source": [
     "# split the item_category once baesd on the first delimiter '-' from the left\n",
-    "product[['sub_cat', 'prod_name']] = product['item_category_name'].str.split('-', n=1, expand=True)"
+    "product[['sub_cat', 'prod_name']] = product['item_category_name'].str.split(\n",
+    "    '-', n=1, expand=True)"
    ]
   },
   {
@@ -962,7 +967,7 @@
     }
    ],
    "source": [
-    "subcat # sub cat will be abbrivation of sub category for the rest the analysis"
+    "subcat  # sub cat will be abbrivation of sub category for the rest the analysis"
    ]
   },
   {
@@ -1040,7 +1045,8 @@
    "outputs": [],
    "source": [
     "# repeat the steps on getting sub_cat features, but this time include time component.\n",
-    "product_top = train_df.groupby(['date_block_num','item_category_name'])['sales'].sum().reset_index(drop=False)"
+    "product_top = train_df.groupby(['date_block_num', 'item_category_name'])[\n",
+    "    'sales'].sum().reset_index(drop=False)"
    ]
   },
   {
@@ -1058,7 +1064,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "product_top = pd.merge(product_top, product[['item_category_name', 'sub_cat']], on='item_category_name', how='left')"
+    "product_top = pd.merge(product_top, product[[\n",
+    "                       'item_category_name', 'sub_cat']], on='item_category_name', how='left')"
    ]
   },
   {
@@ -1076,7 +1083,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "product_top = product_top.groupby(['date_block_num','sub_cat'])['sales'].sum().reset_index(drop=False)"
+    "product_top = product_top.groupby(['date_block_num', 'sub_cat'])[\n",
+    "    'sales'].sum().reset_index(drop=False)"
    ]
   },
   {
@@ -1108,8 +1116,9 @@
     }
    ],
    "source": [
-    "plt.figure(figsize=(20,10))\n",
-    "sns.lineplot(x='date_block_num', y='sales', data=product_top, hue='sub_cat', ci=None)\n",
+    "plt.figure(figsize=(20, 10))\n",
+    "sns.lineplot(x='date_block_num', y='sales',\n",
+    "             data=product_top, hue='sub_cat', ci=None)\n",
     "plt.show()"
    ]
   },
@@ -1140,7 +1149,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "shop = train_df.groupby(['shop_name','shop_id'])['sales'].sum().reset_index(drop=False)"
+    "shop = train_df.groupby(['shop_name', 'shop_id'])[\n",
+    "    'sales'].sum().reset_index(drop=False)"
    ]
   },
   {
@@ -1171,8 +1181,9 @@
     }
    ],
    "source": [
-    "plt.figure(figsize=(15,5))\n",
-    "_ = sns.barplot(x='shop_id', y='sales', data=shop, ci=None, order=shop['shop_id'], color=\"grey\")\n",
+    "plt.figure(figsize=(15, 5))\n",
+    "_ = sns.barplot(x='shop_id', y='sales', data=shop, ci=None,\n",
+    "                order=shop['shop_id'], color=\"grey\")\n",
     "plt.show()"
    ]
   },
@@ -1229,9 +1240,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#recreate a new dataframe by including the time component for stores\n",
-    "shop_ts = train_df.groupby(['shop_name','shop_id', 'date_block_num'])['sales'].sum().reset_index(drop=False)\n",
-    "shop_ts = pd.merge(shop_ts, shop[['shop_id','cluster']], on='shop_id', how='left')"
+    "# recreate a new dataframe by including the time component for stores\n",
+    "shop_ts = train_df.groupby(['shop_name', 'shop_id', 'date_block_num'])[\n",
+    "    'sales'].sum().reset_index(drop=False)\n",
+    "shop_ts = pd.merge(\n",
+    "    shop_ts, shop[['shop_id', 'cluster']], on='shop_id', how='left')"
    ]
   },
   {
@@ -1253,8 +1266,9 @@
     }
    ],
    "source": [
-    "plt.figure(figsize=(20,10))\n",
-    "sns.lineplot(x='date_block_num', y='sales', data=shop_ts, hue='cluster', ci=None)\n",
+    "plt.figure(figsize=(20, 10))\n",
+    "sns.lineplot(x='date_block_num', y='sales',\n",
+    "             data=shop_ts, hue='cluster', ci=None)\n",
     "plt.show()"
    ]
   },
@@ -1297,7 +1311,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
