--- a/model_cls.ipynb
+++ b/model_cls.ipynb
@@ -35,22 +35,23 @@
     }
    ],
    "source": [
+    "from datetime import datetime as dt\n",
+    "\n",
+    "import holidays\n",
+    "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "from datetime import datetime as dt\n",
-    "from pandas.plotting import register_matplotlib_converters\n",
-    "register_matplotlib_converters()\n",
-    "from sklearn.metrics import mean_squared_error\n",
-    "from sklearn.ensemble import RandomForestRegressor\n",
-    "import xgboost as xgb\n",
-    "from xgboost import XGBRegressor\n",
-    "from xgboost import plot_importance\n",
-    "import matplotlib.pyplot as plt\n",
-    "import holidays\n",
     "import seaborn as sns\n",
+    "import xgboost as xgb\n",
+    "from pandas.plotting import register_matplotlib_converters\n",
     "from sklearn import linear_model\n",
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "from sklearn.metrics import mean_squared_error\n",
+    "from xgboost import XGBRegressor, plot_importance\n",
+    "\n",
+    "register_matplotlib_converters()\n",
     "sns.set()\n",
-    "%matplotlib inline "
+    "%matplotlib inline"
    ]
   },
   {
@@ -62,8 +63,10 @@
     "raw_df = pd.read_csv('data/train_df.csv', parse_dates=['date'])\n",
     "# outlier removal steps as identified in exploratory analysis\n",
     "id_out = [11, 14, 15, 12]\n",
-    "raw_df.loc[(raw_df.date == '2013-11-29') & (raw_df.item_category_id.isin(id_out)), 'sales'] = np.nan\n",
-    "raw_df.loc[(raw_df.date_block_num == 10) & (raw_df.item_category_id.isin(id_out))].interpolate(method='linear');"
+    "raw_df.loc[(raw_df.date == '2013-11-29') &\n",
+    "           (raw_df.item_category_id.isin(id_out)), 'sales'] = np.nan\n",
+    "raw_df.loc[(raw_df.date_block_num == 10) & (\n",
+    "    raw_df.item_category_id.isin(id_out))].interpolate(method='linear');"
    ]
   },
   {
@@ -108,7 +111,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "month_df = raw_df.groupby(['date_block_num', 'shop_id', 'item_id','item_category_id','month']).agg({'item_cnt_day':'sum', 'item_price':'mean'}).reset_index()"
+    "month_df = raw_df.groupby(['date_block_num', 'shop_id', 'item_id', 'item_category_id', 'month']).agg(\n",
+    "    {'item_cnt_day': 'sum', 'item_price': 'mean'}).reset_index()"
    ]
   },
   {
@@ -118,8 +122,10 @@
    "outputs": [],
    "source": [
     "# create two helper columns, shop_item and shop_item_date_block_num ('helper'), which will be used for data imputation\n",
-    "month_df['shop_item'] = month_df['item_id'].astype('str') + '_' + month_df['shop_id'].astype('str')\n",
-    "month_df['helper'] = month_df['item_id'].astype('str') + '_' + month_df['shop_id'].astype('str') + '_' +month_df['date_block_num'].astype('str')"
+    "month_df['shop_item'] = month_df['item_id'].astype(\n",
+    "    'str') + '_' + month_df['shop_id'].astype('str')\n",
+    "month_df['helper'] = month_df['item_id'].astype(\n",
+    "    'str') + '_' + month_df['shop_id'].astype('str') + '_' + month_df['date_block_num'].astype('str')"
    ]
   },
   {
@@ -138,9 +144,11 @@
     "# these are tempoarily table to be used to refill values for missing records\n",
     "item = pd.read_csv('data/items.csv', index_col=1)\n",
     "subset_data = month_df[['shop_item']].drop_duplicates().reset_index(drop=True)\n",
-    "subset_price = month_df[['shop_item','item_price']].drop_duplicates().reset_index(drop=True)\n",
+    "subset_price = month_df[['shop_item', 'item_price']\n",
+    "                        ].drop_duplicates().reset_index(drop=True)\n",
     "subset_price = subset_price.groupby(['shop_item']).agg({'item_price': 'mean'})\n",
-    "month_num = month_df[['date_block_num', 'month']].drop_duplicates().reset_index(drop=True)"
+    "month_num = month_df[['date_block_num', 'month']\n",
+    "                     ].drop_duplicates().reset_index(drop=True)"
    ]
   },
   {
@@ -158,9 +166,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "combo = pd.DataFrame(data=list(product(subset_data['shop_item'],range(0,34))), columns=['shop_item', 'date_block_num'])\n",
+    "combo = pd.DataFrame(data=list(product(subset_data['shop_item'], range(\n",
+    "    0, 34))), columns=['shop_item', 'date_block_num'])\n",
     "# this helper column will be used to match data bace from month_df dataframe\n",
-    "combo['helper'] = combo['shop_item'].astype('str') + '_' + combo['date_block_num'].astype('str')"
+    "combo['helper'] = combo['shop_item'].astype(\n",
+    "    'str') + '_' + combo['date_block_num'].astype('str')"
    ]
   },
   {
@@ -178,7 +188,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_combine.drop(columns=['date_block_num_y', 'shop_item_y', 'shop_id','item_id','month'], inplace=True)"
+    "df_combine.drop(columns=['date_block_num_y', 'shop_item_y',\n",
+    "                         'shop_id', 'item_id', 'month'], inplace=True)"
    ]
   },
   {
@@ -194,7 +205,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_combine[['item_id','shop_id']] = df_combine['shop_item_x'].str.split('_', expand=True).astype('int')"
+    "df_combine[['item_id', 'shop_id']] = df_combine['shop_item_x'].str.split(\n",
+    "    '_', expand=True).astype('int')"
    ]
   },
   {
@@ -203,7 +215,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_combine['month'] = df_combine['date_block_num_x'].map(month_num.set_index('date_block_num')['month'])"
+    "df_combine['month'] = df_combine['date_block_num_x'].map(\n",
+    "    month_num.set_index('date_block_num')['month'])"
    ]
   },
   {
@@ -219,10 +232,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_combine.loc[df_combine['item_price'].isnull(),'item_price'] = df_combine['shop_item_x'].map(subset_price['item_price'])\n",
-    "df_combine.loc[df_combine['item_category_id'].isnull(),'item_category_id'] = df_combine['item_id'].map(item['item_category_id'])\n",
-    "df_combine = df_combine.sort_values(['item_id', 'shop_id', 'date_block_num_x'], ascending=[1,1,1]).reset_index(drop=True)\n",
-    "df_combine['item_cnt_day'].fillna(0,inplace=True)"
+    "df_combine.loc[df_combine['item_price'].isnull(\n",
+    "), 'item_price'] = df_combine['shop_item_x'].map(subset_price['item_price'])\n",
+    "df_combine.loc[df_combine['item_category_id'].isnull(\n",
+    "), 'item_category_id'] = df_combine['item_id'].map(item['item_category_id'])\n",
+    "df_combine = df_combine.sort_values(\n",
+    "    ['item_id', 'shop_id', 'date_block_num_x'], ascending=[1, 1, 1]).reset_index(drop=True)\n",
+    "df_combine['item_cnt_day'].fillna(0, inplace=True)"
    ]
   },
   {
@@ -258,7 +274,7 @@
     }
    ],
    "source": [
-    "#check to ensure no missing records\n",
+    "# check to ensure no missing records\n",
     "final_df.isnull().sum()"
    ]
   },
@@ -268,7 +284,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "final_df.rename(columns={'date_block_num_x':'date_block_num'}, inplace=True)"
+    "final_df.rename(columns={'date_block_num_x': 'date_block_num'}, inplace=True)"
    ]
   },
   {
@@ -296,10 +312,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "final_df['lag1_pct'] = final_df['item_cnt_day'].pct_change().clip(-1,1).fillna(0)\n",
-    "final_df['lag3_pct'] = final_df['item_cnt_day'].pct_change(periods=3).clip(-1,1).fillna(0)\n",
-    "final_df['lag6_pct'] = final_df['item_cnt_day'].pct_change(periods=6).clip(-1,1).fillna(0)\n",
-    "final_df['lag12_pct'] = final_df['item_cnt_day'].pct_change(periods=12).clip(-1,1).fillna(0)"
+    "final_df['lag1_pct'] = final_df['item_cnt_day'].pct_change().clip(-1,\n",
+    "                                                                  1).fillna(0)\n",
+    "final_df['lag3_pct'] = final_df['item_cnt_day'].pct_change(\n",
+    "    periods=3).clip(-1, 1).fillna(0)\n",
+    "final_df['lag6_pct'] = final_df['item_cnt_day'].pct_change(\n",
+    "    periods=6).clip(-1, 1).fillna(0)\n",
+    "final_df['lag12_pct'] = final_df['item_cnt_day'].pct_change(\n",
+    "    periods=12).clip(-1, 1).fillna(0)"
    ]
   },
   {
@@ -324,7 +344,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "final_df.drop(final_df[final_df['date_block_num']<=12].index, inplace=True)"
+    "final_df.drop(final_df[final_df['date_block_num'] <= 12].index, inplace=True)"
    ]
   },
   {
@@ -333,7 +353,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "final_df.reset_index(drop=True,inplace=True)"
+    "final_df.reset_index(drop=True, inplace=True)"
    ]
   },
   {
@@ -359,7 +379,7 @@
    "outputs": [],
    "source": [
     "train = final_df[final_df.date_block_num < 32]\n",
-    "test =final_df[final_df.date_block_num == 32]"
+    "test = final_df[final_df.date_block_num == 32]"
    ]
   },
   {
@@ -368,7 +388,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_f = train.drop(['target' ], axis=1)\n",
+    "train_f = train.drop(['target'], axis=1)\n",
     "train_t = train['target']"
    ]
   },
@@ -389,7 +409,7 @@
    "outputs": [],
    "source": [
     "DM_train = xgb.DMatrix(data=train_f, label=train_t)\n",
-    "DM_test =  xgb.DMatrix(data=test_f, label=test_t)"
+    "DM_test = xgb.DMatrix(data=test_f, label=test_t)"
    ]
   },
   {
@@ -398,8 +418,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "params = {\"booster\":\"gbtree\", \"objective\":\"reg:squarederror\", 'max_depth':8, 'n_estimators':500, 'min_child_weight':40, 'colsample_bytree': 0.8, \n",
-    "          'subsample':0.8, 'eta' :0.3, 'seed':42}"
+    "params = {\"booster\": \"gbtree\", \"objective\": \"reg:squarederror\", 'max_depth': 8, 'n_estimators': 500, 'min_child_weight': 40, 'colsample_bytree': 0.8,\n",
+    "          'subsample': 0.8, 'eta': 0.3, 'seed': 42}"
    ]
   },
   {
@@ -418,7 +438,7 @@
    ],
    "source": [
     "%%time\n",
-    "xg_reg = xgb.train(params = params, dtrain=DM_train, num_boost_round=15)"
+    "xg_reg = xgb.train(params=params, dtrain=DM_train, num_boost_round=15)"
    ]
   },
   {
@@ -437,7 +457,7 @@
    "source": [
     "preds = (xg_reg.predict(DM_test))\n",
     "\n",
-    "rmse_xgb = np.sqrt(mean_squared_error(test_t,preds))\n",
+    "rmse_xgb = np.sqrt(mean_squared_error(test_t, preds))\n",
     "print(\"RMSE: %f\" % (rmse_xgb))"
    ]
   },
@@ -514,6 +534,7 @@
    ],
    "source": [
     "from xgboost import plot_importance\n",
+    "\n",
     "plot_importance(xg_reg)\n",
     "plt.show()"
    ]
@@ -524,7 +545,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rfc = RandomForestRegressor(n_estimators=250, max_depth=6, n_jobs=-1, min_samples_leaf=1000)"
+    "rfc = RandomForestRegressor(\n",
+    "    n_estimators=250, max_depth=6, n_jobs=-1, min_samples_leaf=1000)"
    ]
   },
   {
@@ -576,7 +598,7 @@
    ],
    "source": [
     "pred_rfc = rfc.predict(test_f)\n",
-    "rmse_rfc = np.sqrt(mean_squared_error(test_t,pred_rfc))\n",
+    "rmse_rfc = np.sqrt(mean_squared_error(test_t, pred_rfc))\n",
     "print(\"RMSE: %f\" % (rmse_rfc))"
    ]
   },
@@ -762,7 +784,8 @@
     }
    ],
    "source": [
-    "model_comparison = dict({'xgb': rmse_xgb, 'random_forest': rmse_rfc, 'ridge': rmse_reg})\n",
+    "model_comparison = dict(\n",
+    "    {'xgb': rmse_xgb, 'random_forest': rmse_rfc, 'ridge': rmse_reg})\n",
     "print(model_comparison)"
    ]
   },
@@ -806,7 +829,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
