--- a/model_ts.ipynb
+++ b/model_ts.ipynb
@@ -39,24 +39,26 @@
     }
    ],
    "source": [
+    "import logging\n",
+    "\n",
+    "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "from pandas.plotting import register_matplotlib_converters\n",
-    "register_matplotlib_converters()\n",
     "import pmdarima as pm\n",
-    "from statsmodels.graphics.tsaplots import plot_acf, plot_pacf\n",
+    "import seaborn as sns\n",
+    "from fbprophet import Prophet\n",
+    "from pandas.plotting import register_matplotlib_converters\n",
     "from sklearn.metrics import mean_squared_error\n",
-    "from statsmodels.tsa.arima_model import ARMA, ARIMA\n",
+    "from statsmodels.graphics.tsaplots import plot_acf, plot_pacf\n",
+    "from statsmodels.tsa.arima_model import ARIMA, ARMA\n",
+    "from statsmodels.tsa.holtwinters import ExponentialSmoothing\n",
     "from statsmodels.tsa.statespace.sarimax import SARIMAX\n",
     "from statsmodels.tsa.statespace.varmax import VARMAX\n",
-    "from fbprophet import Prophet\n",
-    "from statsmodels.tsa.holtwinters import ExponentialSmoothing\n",
-    "import logging\n",
+    "\n",
+    "register_matplotlib_converters()\n",
     "logging.getLogger().setLevel(logging.ERROR)\n",
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
     "sns.set()\n",
-    "%matplotlib inline "
+    "%matplotlib inline"
    ]
   },
   {
@@ -219,8 +221,10 @@
    ],
    "source": [
     "id_out = [11, 14, 15, 12]\n",
-    "raw_df.loc[(raw_df.date == '2013-11-29') & (raw_df.item_category_id.isin(id_out)), 'sales'] = np.nan\n",
-    "raw_df.loc[(raw_df.date_block_num == 10) & (raw_df.item_category_id.isin(id_out))].interpolate(method='linear');\n",
+    "raw_df.loc[(raw_df.date == '2013-11-29') &\n",
+    "           (raw_df.item_category_id.isin(id_out)), 'sales'] = np.nan\n",
+    "raw_df.loc[(raw_df.date_block_num == 10) & (\n",
+    "    raw_df.item_category_id.isin(id_out))].interpolate(method='linear')\n",
     "raw_df.head()"
    ]
   },
@@ -230,7 +234,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ts_data = raw_df[['date','sales']]"
+    "ts_data = raw_df[['date', 'sales']]"
    ]
   },
   {
@@ -294,7 +298,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mod = ARMA(ts_train, order=(1,0), freq='D')\n",
+    "mod = ARMA(ts_train, order=(1, 0), freq='D')\n",
     "res = mod.fit()\n",
     "arma = res.predict(start=ts_test.index[0], end=ts_test.index[-1])"
    ]
@@ -381,7 +385,8 @@
    ],
    "source": [
     "stepwise_fit = pm.auto_arima(ts_train, start_p=1, start_q=1,\n",
-    "                             max_p=3, max_q=3, m=12, #set m=12 based on seaonality observations from exploratory analysis\n",
+    "                             # set m=12 based on seaonality observations from exploratory analysis\n",
+    "                             max_p=3, max_q=3, m=12,\n",
     "                             start_P=0, seasonal=True,\n",
     "                             d=1, D=1, trace=True,\n",
     "                             error_action='ignore',  # don't want to know if an order does not work\n",
@@ -539,7 +544,8 @@
     }
    ],
    "source": [
-    "mod_1 = SARIMAX(ts_train, order=(3,1,3), seasonal_order=(1,1,2,12), freq='D')\n",
+    "mod_1 = SARIMAX(ts_train, order=(3, 1, 3),\n",
+    "                seasonal_order=(1, 1, 2, 12), freq='D')\n",
     "res_1 = mod_1.fit()\n",
     "sarimax = res_1.predict(start=ts_test.index[0], end=ts_test.index[-1])"
    ]
@@ -578,7 +584,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mod_h = ExponentialSmoothing(ts_train, seasonal_periods=12, trend='add', seasonal='add', freq='D', damped=True)\n",
+    "mod_h = ExponentialSmoothing(\n",
+    "    ts_train, seasonal_periods=12, trend='add', seasonal='add', freq='D', damped=True)\n",
     "res_h = mod_h.fit(use_boxcox=True)\n",
     "holt_w = res_h.predict(start=ts_test.index[0], end=ts_test.index[-1])"
    ]
@@ -620,7 +627,7 @@
    "outputs": [],
    "source": [
     "prophet_df = ts_daily.reset_index()\n",
-    "prophet_df.columns = ['ds','y']\n",
+    "prophet_df.columns = ['ds', 'y']\n",
     "prophet_df.ds = pd.to_datetime(prophet_df.ds)\n",
     "prophet_df.y = prophet_df.y.astype('float')"
    ]
@@ -668,7 +675,7 @@
    "outputs": [],
    "source": [
     "fcst_data = fcst[['ds', 'yhat']][-pred_period:]\n",
-    "fcst_data.set_index(fcst_data['ds'],inplace=True)"
+    "fcst_data.set_index(fcst_data['ds'], inplace=True)"
    ]
   },
   {
@@ -716,8 +723,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "product = raw_df.groupby(['date','item_category_name'])['sales'].sum().reset_index(drop=False)\n",
-    "product[['sub_cat', 'prod_name']] = product['item_category_name'].str.split('-', n=1, expand=True)\n",
+    "product = raw_df.groupby(['date', 'item_category_name'])[\n",
+    "    'sales'].sum().reset_index(drop=False)\n",
+    "product[['sub_cat', 'prod_name']] = product['item_category_name'].str.split(\n",
+    "    '-', n=1, expand=True)\n",
     "product['sub_cat'] = product['sub_cat'].apply(lambda x: x.strip().lower())"
    ]
   },
@@ -727,7 +736,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "subcat = product.groupby(['date','sub_cat'])['sales'].sum().reset_index(drop=False)"
+    "subcat = product.groupby(['date', 'sub_cat'])[\n",
+    "    'sales'].sum().reset_index(drop=False)"
    ]
   },
   {
@@ -736,8 +746,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#below are top categoroies identified in exploratory analysis, which account for 92% of total sales\n",
-    "top_cat = ['игры','игровые консоли','игры pc', 'кино','подарки','аксессуары','музыка','программы']"
+    "# below are top categoroies identified in exploratory analysis, which account for 92% of total sales\n",
+    "top_cat = ['игры', 'игровые консоли', 'игры pc', 'кино',\n",
+    "           'подарки', 'аксессуары', 'музыка', 'программы']"
    ]
   },
   {
@@ -755,7 +766,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "top_subcat_pivot = top_subcat.pivot_table(index=['date'],columns=['sub_cat'], values=['sales'],aggfunc='sum')\n",
+    "top_subcat_pivot = top_subcat.pivot_table(\n",
+    "    index=['date'], columns=['sub_cat'], values=['sales'], aggfunc='sum')\n",
     "top_subcat_pivot.fillna(0, inplace=True)"
    ]
   },
@@ -942,7 +954,8 @@
     }
    ],
    "source": [
-    "model = VARMAX(cat_train, order=(3, 3), freq='D') # reuse the orders identified in SARIMA model\n",
+    "# reuse the orders identified in SARIMA model\n",
+    "model = VARMAX(cat_train, order=(3, 3), freq='D')\n",
     "model_fit = model.fit(maxiter=10, disp=False)"
    ]
   },
@@ -963,7 +976,9 @@
     }
    ],
    "source": [
-    "varx = model_fit.predict(start=ts_test.index[0], end=ts_test.index[-1]).sum(axis=1)/.92 #pro-rated back to 100% of sales"
+    "# pro-rated back to 100% of sales\n",
+    "varx = model_fit.predict(\n",
+    "    start=ts_test.index[0], end=ts_test.index[-1]).sum(axis=1)/.92"
    ]
   },
   {
@@ -1000,11 +1015,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = pd.DataFrame({'model': ['ARMA', 'SARIMAX', 'Holt Winter','Prophet', 'VARMAX'], \n",
+    "model = pd.DataFrame({'model': ['ARMA', 'SARIMAX', 'Holt Winter', 'Prophet', 'VARMAX'],\n",
     "                      'RMSE': [arma_rmse, sarx_rmse, holt_w_rmse, prophet_rmse, varx_rmse],\n",
-    "                      'MAPE':[arma_mape, sarx_mape, holt_w_mape, prophet_mape, varx_mape]\n",
-    "                      \n",
-    "                     })\n",
+    "                      'MAPE': [arma_mape, sarx_mape, holt_w_mape, prophet_mape, varx_mape]\n",
+    "\n",
+    "                      })\n",
     "model.set_index('model', inplace=True)"
    ]
   },
@@ -1118,7 +1133,7 @@
     }
    ],
    "source": [
-    "plt.figure(figsize=(20,5))\n",
+    "plt.figure(figsize=(20, 5))\n",
     "sarimax.plot(color='green', label='sarimax')\n",
     "arma.plot(color='red', linestyle=':', label='ARMA')\n",
     "holt_w.plot(color='purple', linestyle='-.', label='Holt Winter')\n",
@@ -1168,7 +1183,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
