--- a/obtain_data.ipynb
+++ b/obtain_data.ipynb
@@ -33,8 +33,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import kaggle\n",
-    "import os, zipfile"
+    "import os\n",
+    "import zipfile\n",
+    "\n",
+    "import kaggle"
    ]
   },
   {
@@ -95,7 +97,7 @@
     }
    ],
    "source": [
-    "!kaggle competitions download -c competitive-data-science-predict-future-sales -p data"
+    "!kaggle competitions download - c competitive-data-science-predict-future-sales - p data"
    ]
   },
   {
@@ -139,13 +141,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for item in os.listdir(dir_name): # loop through items in dir\n",
-    "    if item.endswith('.zip'): # check for \".zip\" extension\n",
-    "        file_name = dir_name+item # get full path of files\n",
-    "        zip_ref = zipfile.ZipFile(file_name) # create zipfile object\n",
-    "        zip_ref.extractall(dir_name) # extract file to dir\n",
-    "        zip_ref.close() # close file\n",
-    "        os.remove(file_name) # delete zipped file"
+    "for item in os.listdir(dir_name):  # loop through items in dir\n",
+    "    if item.endswith('.zip'):  # check for \".zip\" extension\n",
+    "        file_name = dir_name+item  # get full path of files\n",
+    "        zip_ref = zipfile.ZipFile(file_name)  # create zipfile object\n",
+    "        zip_ref.extractall(dir_name)  # extract file to dir\n",
+    "        zip_ref.close()  # close file\n",
+    "        os.remove(file_name)  # delete zipped file"
    ]
   }
  ],
@@ -165,9 +167,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
