--- a/outlier.ipynb
+++ b/outlier.ipynb
@@ -24,15 +24,16 @@
     }
    ],
    "source": [
-    "import numpy as np\n",
-    "import pandas.testing as tm\n",
-    "import pandas as pd\n",
-    "from pandas.plotting import register_matplotlib_converters\n",
-    "register_matplotlib_converters()\n",
     "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import pandas.testing as tm\n",
     "import seaborn as sns\n",
+    "from pandas.plotting import register_matplotlib_converters\n",
+    "\n",
+    "register_matplotlib_converters()\n",
     "sns.set()\n",
-    "%matplotlib inline "
+    "%matplotlib inline"
    ]
   },
   {
@@ -304,7 +305,7 @@
     }
    ],
    "source": [
-    "plt.figure(figsize=(20,5))\n",
+    "plt.figure(figsize=(20, 5))\n",
     "sns.lineplot(x='date', y='sales', data=daily, ci=None)\n",
     "plt.show()"
    ]
@@ -322,8 +323,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cat_id = outlier.groupby(['date', 'item_category_name', 'item_category_id'])['sales'].sum().reset_index()\n",
-    "cat_id[['sub_cat', 'prod_name']] = cat_id['item_category_name'].str.split('-', n=1, expand=True)\n",
+    "cat_id = outlier.groupby(['date', 'item_category_name', 'item_category_id'])[\n",
+    "    'sales'].sum().reset_index()\n",
+    "cat_id[['sub_cat', 'prod_name']] = cat_id['item_category_name'].str.split(\n",
+    "    '-', n=1, expand=True)\n",
     "cat_id['sub_cat'] = cat_id['sub_cat'].apply(lambda x: x.strip().lower())"
    ]
   },
@@ -346,7 +349,7 @@
     }
    ],
    "source": [
-    "plt.figure(figsize = (20, 10))\n",
+    "plt.figure(figsize=(20, 10))\n",
     "sns.lineplot(x='date', y='sales', data=cat_id, hue='sub_cat', ci=None)\n",
     "plt.show()"
    ]
@@ -408,7 +411,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "shop = outlier.groupby(['date', 'item_category_id', 'shop_id'])['sales'].sum().reset_index()"
+    "shop = outlier.groupby(['date', 'item_category_id', 'shop_id'])[\n",
+    "    'sales'].sum().reset_index()"
    ]
   },
   {
@@ -516,7 +520,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "shop_outlier = shop_outlier.groupby(['date','shop_id'])['sales'].sum().reset_index()"
+    "shop_outlier = shop_outlier.groupby(['date', 'shop_id'])[\n",
+    "    'sales'].sum().reset_index()"
    ]
   },
   {
@@ -538,7 +543,7 @@
     }
    ],
    "source": [
-    "plt.figure(figsize = (20, 10))\n",
+    "plt.figure(figsize=(20, 10))\n",
     "sns.lineplot(x='date', y='sales', data=shop_outlier, hue='shop_id', ci=None)\n",
     "plt.show()"
    ]
@@ -565,8 +570,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#steps on replaceing the outlier, set the qualified values to np.nan\n",
-    "train_df.loc[(train_df.date == '2013-11-29') & (train_df.item_category_id.isin(id_out)), 'sales'] = np.nan"
+    "# steps on replaceing the outlier, set the qualified values to np.nan\n",
+    "train_df.loc[(train_df.date == '2013-11-29') &\n",
+    "             (train_df.item_category_id.isin(id_out)), 'sales'] = np.nan"
    ]
   },
   {
@@ -719,7 +725,8 @@
     }
    ],
    "source": [
-    "train_df.loc[(train_df.date == '2013-11-29') & (train_df.item_category_id.isin(id_out))].head()"
+    "train_df.loc[(train_df.date == '2013-11-29') &\n",
+    "             (train_df.item_category_id.isin(id_out))].head()"
    ]
   },
   {
@@ -872,8 +879,9 @@
     }
    ],
    "source": [
-    "#interploate the values by taking the average between the date before and after\n",
-    "train_df.loc[(train_df.date_block_num == 10) & (train_df.item_category_id.isin(id_out))].interpolate(method='linear').head()"
+    "# interploate the values by taking the average between the date before and after\n",
+    "train_df.loc[(train_df.date_block_num == 10) & (\n",
+    "    train_df.item_category_id.isin(id_out))].interpolate(method='linear').head()"
    ]
   },
   {
@@ -906,9 +914,9 @@
    ],
    "source": [
     "# Look at the before and after datafram to confirm that the outlier has been smoothed out\n",
-    "plt.figure(figsize=(20,5))\n",
+    "plt.figure(figsize=(20, 5))\n",
     "sns.lineplot(x='date', y='sales', data=daily_1, ci=None, label='after')\n",
-    "sns.lineplot(x='date',y='sales', data=daily, ci=None, label='before')\n",
+    "sns.lineplot(x='date', y='sales', data=daily, ci=None, label='before')\n",
     "plt.show()"
    ]
   },
