--- a/regtest.ipynb
+++ b/regtest.ipynb
@@ -36,18 +36,20 @@
     }
    ],
    "source": [
+    "from datetime import datetime as dt\n",
+    "\n",
+    "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import statsmodels.api as sm\n",
-    "from statsmodels.formula.api import ols\n",
-    "from datetime import datetime as dt\n",
-    "from pandas.plotting import register_matplotlib_converters\n",
-    "register_matplotlib_converters()\n",
-    "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
+    "import statsmodels.api as sm\n",
+    "from pandas.plotting import register_matplotlib_converters\n",
     "from sklearn import linear_model\n",
+    "from statsmodels.formula.api import ols\n",
+    "\n",
+    "register_matplotlib_converters()\n",
     "sns.set()\n",
-    "%matplotlib inline "
+    "%matplotlib inline"
    ]
   },
   {
@@ -59,8 +61,10 @@
     "raw_df = pd.read_csv('data/train_df.csv', parse_dates=['date'])\n",
     "# outlier removal steps as identified in exploratory analysis\n",
     "id_out = [11, 14, 15, 12]\n",
-    "raw_df.loc[(raw_df.date == '2013-11-29') & (raw_df.item_category_id.isin(id_out)), 'sales'] = np.nan\n",
-    "raw_df.loc[(raw_df.date_block_num == 10) & (raw_df.item_category_id.isin(id_out))].interpolate(method='linear');"
+    "raw_df.loc[(raw_df.date == '2013-11-29') &\n",
+    "           (raw_df.item_category_id.isin(id_out)), 'sales'] = np.nan\n",
+    "raw_df.loc[(raw_df.date_block_num == 10) & (\n",
+    "    raw_df.item_category_id.isin(id_out))].interpolate(method='linear');"
    ]
   },
   {
@@ -85,7 +89,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "month_df = raw_df.groupby(['date_block_num', 'shop_id', 'item_category_id','month']).agg({'item_cnt_day':'sum','item_price':'mean'}).reset_index()"
+    "month_df = raw_df.groupby(['date_block_num', 'shop_id', 'item_category_id', 'month']).agg(\n",
+    "    {'item_cnt_day': 'sum', 'item_price': 'mean'}).reset_index()"
    ]
   },
   {
@@ -94,7 +99,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "month_df_flat = pd.get_dummies(columns=['shop_id', 'item_category_id', 'month'], drop_first=True, data=month_df)"
+    "month_df_flat = pd.get_dummies(\n",
+    "    columns=['shop_id', 'item_category_id', 'month'], drop_first=True, data=month_df)"
    ]
   },
   {
@@ -312,7 +318,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X = month_df_flat.iloc[:,2:]\n",
+    "X = month_df_flat.iloc[:, 2:]\n",
     "y = month_df_flat['item_cnt_day']"
    ]
   },
@@ -1055,7 +1061,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
