--- a/ts_stattest.ipynb
+++ b/ts_stattest.ipynb
@@ -25,18 +25,20 @@
    ],
    "source": [
     "import chart_studio.plotly\n",
-    "from statsmodels.tsa.seasonal import seasonal_decompose\n",
+    "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "from pandas.plotting import register_matplotlib_converters\n",
-    "register_matplotlib_converters()\n",
-    "from statsmodels.tsa.stattools import acf, adfuller\n",
-    "from statsmodels.graphics.tsaplots import plot_acf, plot_pacf\n",
-    "import matplotlib.pyplot as plt, pylab\n",
-    "from pylab import *\n",
+    "import pylab\n",
     "import seaborn as sns\n",
+    "from pandas.plotting import register_matplotlib_converters\n",
+    "from pylab import *\n",
+    "from statsmodels.graphics.tsaplots import plot_acf, plot_pacf\n",
+    "from statsmodels.tsa.seasonal import seasonal_decompose\n",
+    "from statsmodels.tsa.stattools import acf, adfuller\n",
+    "\n",
+    "register_matplotlib_converters()\n",
     "sns.set()\n",
-    "%matplotlib inline "
+    "%matplotlib inline"
    ]
   },
   {
@@ -62,8 +64,10 @@
    "outputs": [],
    "source": [
     "id_out = [11, 14, 15, 12]\n",
-    "train_df.loc[(train_df.date == '2013-11-29') & (train_df.item_category_id.isin(id_out)), 'sales'] = np.nan\n",
-    "train_df.loc[(train_df.date_block_num == 10) & (train_df.item_category_id.isin(id_out))].interpolate(method='linear');"
+    "train_df.loc[(train_df.date == '2013-11-29') &\n",
+    "             (train_df.item_category_id.isin(id_out)), 'sales'] = np.nan\n",
+    "train_df.loc[(train_df.date_block_num == 10) & (\n",
+    "    train_df.item_category_id.isin(id_out))].interpolate(method='linear');"
    ]
   },
   {
@@ -228,7 +232,7 @@
    "outputs": [],
    "source": [
     "# Obtaining the date adn sales column from the dataset\n",
-    "ts_data = train_df[['date','sales']]"
+    "ts_data = train_df[['date', 'sales']]"
    ]
   },
   {
@@ -493,7 +497,7 @@
    ],
    "source": [
     "conf = 1.96/np.sqrt(len(ts_daily))\n",
-    "print(\"The approximate confidence interval is +/- %4.2f\" %(conf))"
+    "print(\"The approximate confidence interval is +/- %4.2f\" % (conf))"
    ]
   },
   {
@@ -524,7 +528,7 @@
     }
    ],
    "source": [
-    "results =adfuller(ts_daily)\n",
+    "results = adfuller(ts_daily)\n",
     "print(results)\n",
     "print('p-value is {:.4%}'.format(results[1]))"
    ]
@@ -563,7 +567,7 @@
    ],
    "source": [
     "pylab.rcParams['figure.figsize'] = (15, 5)\n",
-    "res= seasonal_decompose(ts_daily)\n",
+    "res = seasonal_decompose(ts_daily)\n",
     "res.plot();"
    ]
   },
@@ -625,7 +629,7 @@
     }
    ],
    "source": [
-    "#Using lag of 7\n",
+    "# Using lag of 7\n",
     "ts_daily_lag = ts_daily - ts_daily.shift(7)\n",
     "ts_daily_lag.dropna(inplace=True)\n",
     "ts_daily_lag.plot();"
@@ -742,7 +746,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
